--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     </head>
     <body>
         <!---Header-->
+        <header>
+            <a href="/"class="logo">Wedding</a>
+            <ul class="nav">
+           <li><a class="nav-btn"href="#">home</a></li>
+           <li><a class="nav-btn"href="#"data-target="about">about</a></li>
+           <li><a class="nav-btn"href="#"data-target="services">services</a></li>
+           <li>
+            
+           </li>
+            </ul>
+        </header>
 
         <!--Mobile Navigation-->
 
