--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
         <!---Header-->
         <header>
             <a href="/"class="logo">Wedding</a>
+            <a href="#"class="menu"><ion-icon name="menu-outline"></ion-icon></a>
             <ul class="nav">
-           <li><a class="nav-btn"href="#">home</a></li>
+           <li><a class="nav-btn activate"href="/">
+            <ion-icon name="home-outline"></ion-icon>
+        </a></li>
            <li><a class="nav-btn"href="#"data-target="about">about</a></li>
            <li><a class="nav-btn"href="#"data-target="services">services</a></li>
            <li>
-            
+            <a class="nav-btn"href="#"data-target="portfolio">portfolio</a>
+           </li>
+           <li>
+            <a class="nav-btn"href="#"data-target="contact">Contact</a>
            </li>
             </ul>
         </header>
@@ -34,7 +40,12 @@
         <!--Main End-->
 
         <!--Javascript vendors-->
-
+        <script 
+        type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+        ></script>
+        <script 
+        nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+        ></script>
         <!--coustomized javascript-->
     </body>
 </html>
