--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport"content="width=divice-width,intial-scale=1.0"/>
+        <link rel="stylesheet" href="./css/style.css "/>
+
         <title>Wedding Planning website</title>
     </head>
     <body>
@@ -23,6 +25,10 @@
             <a class="nav-btn"href="#"data-target="contact">Contact</a>
            </li>
             </ul>
+            <div class="search">
+                <input type="text"placeholder="Search"/>
+                <ion-icon name="search-outline"></ion-icon>
+            </div>
         </header>
 
         <!--Mobile Navigation-->
