--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
         nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
         ></script>
         <!--coustomized javascript-->
+        <script src="./js/main.js"></script>
     </body>
 </html>
