--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport"content="width=divice-width,intial-scale=1.0"/>
         <link rel="stylesheet" href="./css/style.css "/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
         <title>Wedding Planning website</title>
     </head>
@@ -34,6 +35,21 @@
         <!--Mobile Navigation-->
 
         <!--Banner-->
+        <div class="banner container-fluid">
+            <div class="bg-slide slide-1 active">
+                <div class="content">
+                    <h1>Wedding</h1>
+                    <p>
+                        Celebrate love in a breathtaking fusion of elegance and whimsy with our bespoke weddings. 
+                         we specialize in crafting unforgettable moments tailored to your unique love story. 
+                         Picture exchanging vows under a canopy of twinkling lights, surrounded by lush gardens and the soft melody of a string quartet. 
+                         Whether you dream of a grand affair or an intimate gathering, our team is dedicated to turning your vision.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!--*****************
+        ****Main Start******-->
 
         <!--About section-->
 
@@ -52,6 +68,10 @@
         <script 
         nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
         ></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+         crossorigin="anonymous">
+        </script> 
         <!--coustomized javascript-->
         <script src="./js/main.js"></script>
     </body>
