--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
                          Whether you dream of a grand affair or an intimate gathering, our team is dedicated to turning your vision.
                     </p>
                 </div>
+                <div class="circle bg">
+                    <img src="./images/wedding-1.jpg" alt=""/>
+                    <div class="circle large">
+                        <img src="./images/wedding-1.jpg" alt=""/>
+                        <div class="circle small">
+                            <img src="./images/wedding-1.jpg" alt=""/>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!--*****************
