--- a/index.html
+++ b/index.html
@@ -56,6 +56,51 @@
                     </div>
                 </div>
             </div>
+            <div class="bg-slide slide-2">
+                <div class="content">
+                    <h1>Ceremony</h1>
+                    <p>
+                        Celebrate love in a breathtaking fusion of elegance and whimsy with our bespoke weddings. 
+                         we specialize in crafting unforgettable moments tailored to your unique love story. 
+                         Picture exchanging vows under a canopy of twinkling lights, surrounded by lush gardens and the soft melody of a string quartet. 
+                         Whether you dream of a grand affair or an intimate gathering, our team is dedicated to turning your vision.
+                    </p>
+                </div>
+                <div class="circle bg">
+                    <img src="./images/wedding-2.jpg" alt=""/>
+                    <div class="circle large">
+                        <img src="./images/wedding-2.jpg" alt=""/>
+                        <div class="circle small">
+                            <img src="./images/wedding-2.jpg" alt=""/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-slide slide-3">
+                <div class="content">
+                    <h1>honeymoon</h1>
+                    <p>
+                        Celebrate love in a breathtaking fusion of elegance and whimsy with our bespoke weddings. 
+                         we specialize in crafting unforgettable moments tailored to your unique love story. 
+                         Picture exchanging vows under a canopy of twinkling lights, surrounded by lush gardens and the soft melody of a string quartet. 
+                         Whether you dream of a grand affair or an intimate gathering, our team is dedicated to turning your vision.
+                    </p>
+                </div>
+                <div class="circle bg">
+                    <img src="./images/wedding-3.jpg" alt=""/>
+                    <div class="circle large">
+                        <img src="./images/wedding-3.jpg" alt=""/>
+                        <div class="circle small">
+                            <img src="./images/wedding-3.jpg" alt=""/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <ul class="slide-loader">
+                <li><a>1</a></li>
+                <li><a>2</a></li>
+                <li><a>3</a></li>
+            </ul>
         </div>
         <!--*****************
         ****Main Start******-->
