--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 </div>
             </div>
             <ul class="slide-loader">
-                <li><a>1</a></li>
-                <li><a>2</a></li>
-                <li><a>3</a></li>
+                <li><a class="slide-btn active" data-target="slide-1">1</a></li>
+                <li><a class="slide-btn"data-target="slide-2">2</a></li>
+                <li><a class="slide-btn"data-target="slide-3">3</a></li>
             </ul>
         </div>
         <!--*****************
