--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
                 <li><a class="slide-btn"data-target="slide-2">2</a></li>
                 <li><a class="slide-btn"data-target="slide-3">3</a></li>
             </ul>
+            <div class="share">
+                <p>share</p>
+                <a href="#"><ion-icon name="share-social-outline"></ion-icon></a>
+            </div>
         </div>
         <!--*****************
         ****Main Start******-->
