--- a/index.html
+++ b/index.html
@@ -105,6 +105,28 @@
                 <p>share</p>
                 <a href="#"><ion-icon name="share-social-outline"></ion-icon></a>
             </div>
+            <div class="lead">
+                <svg viewBox="0 0 100 100" width="100" height="100">
+                    <defs>
+                        <path
+                        id="circle"
+                        d="
+                        M 50,50
+                        m -37, 0
+                        a 37,37,0 1,1 74,0
+                        a 37,37 0 1,1 -74,0"
+                        />
+                    </defs>
+                    <text font-size="17">
+                        <textPath xlink:href="#circle">
+                            Will you marry me,Baby.....yes I do.....
+                        </textPath>
+                    </text>
+                </svg> 
+                <a href="#"class="move-down">
+                    <ion-icon name="chevron-down-outline"></ion-icon>
+                </a>
+            </div>
         </div>
         <!--*****************
         ****Main Start******-->
