--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </defs>
                     <text font-size="17">
                         <textPath xlink:href="#circle">
-                            Will you marry me,Baby.....yes I do.....
+                            Will you marry me,Baby.....yes I do.
                         </textPath>
                     </text>
                 </svg> 
