--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </defs>
                     <text font-size="17">
                         <textPath xlink:href="#circle">
-                            Will you marry me,Baby.....yes I do.
+                            Will you marry me,Baby.....yes I do...
                         </textPath>
                     </text>
                 </svg> 
@@ -130,17 +130,22 @@
         </div>
         <!--*****************
         ****Main Start******-->
-
+        <main>
         <!--About section-->
+        <div id="about" class="about"></div>
 
-        <!--Server section-->
+        <!--Service section-->
+        <div id="services" class="services"></div>
 
-        <!--Portfolio section-->
+        <!--Portfolio section--> 
 
+        <div id="portfolio" class="portfolio"></div>
         <!--Contact section-->
 
-        <!--Main End-->
+        <div id="Contact" class="Contact"></div>
 
+        <!--Main End-->
+        </main>
         <!--Javascript vendors-->
         <script 
         type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
