--- a/index.html
+++ b/index.html
@@ -132,20 +132,20 @@
         ****Main Start******-->
         <main>
         <!--About section-->
-        <div id="about" class="about"></div>
+        <section id="about" class="about"></section>
 
         <!--Service section-->
-        <div id="services" class="services"></div>
+        <section id="services" class="services"></section>
 
         <!--Portfolio section--> 
 
-        <div id="portfolio" class="portfolio"></div>
+        <section id="portfolio" class="portfolio"></section>
         <!--Contact section-->
 
-        <div id="Contact" class="Contact"></div>
-
-        <!--Main End-->
+        <section id="Contact" class="Contact"></section>
         </main>
+        <!--Main End-->
+
         <!--Javascript vendors-->
         <script 
         type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
