--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="/"class="logo">Wedding</a>
             <a href="#"class="menu"><ion-icon name="menu-outline"></ion-icon></a>
             <ul class="nav">
-           <li><a class="nav-btn activate"href="/">
+           <li><a class="nav-btn activate"href="/" onclick="resetHeader();">
             <ion-icon name="home-outline"></ion-icon>
         </a></li>
            <li><a class="nav-btn"href="#"data-target="about">about</a></li>
@@ -123,7 +123,7 @@
                         </textPath>
                     </text>
                 </svg> 
-                <a href="#"class="move-down">
+                <a href="#"class="move-down"onclick="initNavigation();">
                     <ion-icon name="chevron-down-outline"></ion-icon>
                 </a>
             </div>
