--- a/index.html
+++ b/index.html
@@ -132,7 +132,27 @@
         ****Main Start******-->
         <main>
             <!-- About section -->
-            <section id="about" class="about"></section>
+            <section id="about" class="about">
+                <div class="container">
+                    <div class="row">
+                        <h1>About Us</h1>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="col-lg-6">
+                                <div class ="img-box">
+                                    <img src="images/about-1.jpg"alt=""class="img-fluid"/>
+                                    <img src="images/about-2.jpg"alt=""class="corner-img"/>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <img src ="images/bg-tree.png"alt=""class="section-bg-img"/>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             
             <!-- Service section -->
             <section id="services" class="services"></section>
