--- a/index.html
+++ b/index.html
@@ -137,18 +137,16 @@
                     <div class="row">
                         <h1>About Us</h1>
                     </div>
-                    <div class="row">
+                    <div class ="row">
+                        <div class ="col-lg-6">
+                            <div class="img-box">
+                                <img src="./images/about-1.jpg"alt="" class="img-fluid"/>
+                                <img src="./images/about-2.jpg"alt="" class="corner-img"/>
+                            </div>
+                        </div>
                         <div class="col-lg-6">
-                            <div class="col-lg-6">
-                                <div class ="img-box">
-                                    <img src="images/about-1.jpg"alt=""class="img-fluid"/>
-                                    <img src="images/about-2.jpg"alt=""class="corner-img"/>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <img src ="images/bg-tree.png"alt=""class="section-bg-img"/>
-                                
-                            </div>
+                            <img src="./images/bg-tree.png"alt="" class="section-bg-img"/>
+                            <h4></h4>
                         </div>
                     </div>
                 </div>
