--- a/index.html
+++ b/index.html
@@ -146,7 +146,19 @@
                         </div>
                         <div class="col-lg-6">
                             <img src="./images/bg-tree.png"alt="" class="section-bg-img"/>
-                            <h4></h4>
+                            <h4>Make wedding dream come true</h4>
+                            <p>
+                                Welcome to your dedicated partner in crafting the wedding of your dreams. 
+                                At Enchanted Events, we believe that every love story is unique, 
+                                and your wedding should be a reflection of your personal journey together. 
+                                Our mission is to turn your vision into a beautifully orchestrated reality.
+                            </p>
+                            <p>
+                                Celebrate love in a breathtaking fusion of elegance and whimsy with our bespoke weddings. 
+                                 we specialize in crafting unforgettable moments tailored to your unique love story. 
+                                 Picture exchanging vows under a canopy of twinkling lights, surrounded by lush gardens and the soft melody of a string quartet. 
+                                 Whether you dream of a grand affair or an intimate gathering, our team is dedicated to turning your vision.
+                            </p>
                         </div>
                     </div>
                 </div>
