--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                                  Picture exchanging vows under a canopy of twinkling lights, surrounded by lush gardens and the soft melody of a string quartet. 
                                  Whether you dream of a grand affair or an intimate gathering, our team is dedicated to turning your vision.
                             </p>
+                            <a href="#" class="section-btn">Discover more</a>
                         </div>
                     </div>
                 </div>
