--- a/index.html
+++ b/index.html
@@ -171,6 +171,25 @@
                 <div class="row">
                     <h1>Our Services</h1>
                 </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="card">
+                            <div class="img-box">
+                                <img src="./images/services-1.jpg" alt="">
+                            </div>
+                            <div class="details">
+                                <h4>Wedding Planning</h4>
+                                <p>
+                                 we specialize in turning your wedding dreams into reality. 
+                                 With a passion for perfection and a keen eye for detail, 
+                                 we offer personalized planning and design services that reflect your unique love story. 
+                                 From intimate gatherings to grand celebrations, we are here to ensure your special day is as magical as you’ve always envisioned.
+                                </p>
+                                <a href="#" class="section-btn">Discover more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             </section>
             <!-- Portfolio section --> 
