--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
                     <div class="col-lg-4">
                         <div class="card">
                             <div class="img-box">
-                                <img src="./images/services-1.jpg" alt="">
+                                <img src="./images/services-1.jpg" alt=""/>
                             </div>
                             <div class="details">
-                                <h4>Wedding Planning</h4>
+                                <h4>Wedding Plan</h4>
                                 <p>
                                  we specialize in turning your wedding dreams into reality. 
                                  With a passion for perfection and a keen eye for detail, 
