--- a/index.html
+++ b/index.html
@@ -183,9 +183,10 @@
                                  we specialize in turning your wedding dreams into reality. 
                                  With a passion for perfection and a keen eye for detail, 
                                  we offer personalized planning and design services that reflect your unique love story. 
-                                 From intimate gatherings to grand celebrations, we are here to ensure your special day is as magical as you’ve always envisioned.
+                                 From intimate gatherings to grand celebrations, 
+                                 we are here to ensure your special day is as magical as you’ve always envisioned.<br>
+                                 <a href="#" class="section-btn">Discover more</a> </br>
                                 </p>
-                                <a href="#" class="section-btn">Discover more</a>
                             </div>
                         </div>
                     </div>
