finish services section

--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                 <div class="row">
                     <h1>Our Services</h1>
                 </div>
+                <div class="row d-flex justify-content-center align-items-center">
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="card">
@@ -190,11 +191,48 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4">
+                        <div class="card">
+                            <div class="img-box">
+                                <img src="./images/services-2.jpg" alt=""/>
+                            </div>
+                            <div class="details">
+                                <h4>Ceremony</h4>
+                                <p>
+                                 we specialize in turning your wedding dreams into reality. 
+                                 With a passion for perfection and a keen eye for detail, 
+                                 we offer personalized planning and design services that reflect your unique love story. 
+                                 From intimate gatherings to grand celebrations, 
+                                 we are here to ensure your special day is as magical as you’ve always envisioned.<br>
+                                 <a href="#" class="section-btn">Discover more</a> </br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card">
+                            <div class="img-box">
+                                <img src="./images/services-3.jpg" alt=""/>
+                            </div>
+                            <div class="details">
+                                <h4>Honeymoon</h4>
+                                <p>
+                                 we specialize in turning your wedding dreams into reality. 
+                                 With a passion for perfection and a keen eye for detail, 
+                                 we offer personalized planning and design services that reflect your unique love story. 
+                                 From intimate gatherings to grand celebrations, 
+                                 we are here to ensure your special day is as magical as you’ve always envisioned.<br>
+                                 <a href="#" class="section-btn">Discover more</a> </br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             </section>
             <!-- Portfolio section --> 
             <section id="portfolio" class="portfolio"></section>
+            
             
             <!-- Contact section -->
             <section id="contact" class="contact"></section>
