--- a/index.html
+++ b/index.html
@@ -236,8 +236,11 @@
                 <div class="row">
                     <h1>Our Portfolio</h1>
                 </div>
-                <ul id="portfolio-filter">
-                    
+                <ul id="portfolio-filters" class="d-flex justify-content-center">
+                    <li data-filter="#" class="filter-active">All</li>
+                    <li data-filter=".filter-wedding">Wedding</li>
+                    <li data-filter=".filter-ceremoney">Ceremony</li>
+                    <li data-filter=".filter-honeymoon">Honeymoon</li>
                 </ul>
             </div>
             </section>
