--- a/index.html
+++ b/index.html
@@ -242,6 +242,32 @@
                     <li data-filter=".filter-ceremoney">Ceremony</li>
                     <li data-filter=".filter-honeymoon">Honeymoon</li>
                 </ul>
+                <div class="row portfolio container">
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                        <div class="portfolio-img">
+                            <img
+                            class="img-fluid"
+                            src="./images/portfolio/portfolio-1.jpg"
+                            alt=""
+                            />
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Wedding Planning 1</h4>
+                            <p>Wedding Planning 1</p>
+                            <a
+                            href="./images/portfolio/portfolio-1.jpg"
+                            data-gallery="portfolioGallery"
+                            class="portfolio-lightbox preview-link"
+                            title="Wedding Planning 1"
+                            >
+                            <ion-icon name="add-outline"></ion-icon>
+                        </a>
+                        <a href="#" class="details-link" title="More details">
+                            <ion-icon name="link-outline"></ion-icon>
+                        </a>
+                        </div>
+                    </div>
+                </div>
             </div>
             </section>
             <!-- Contact section -->
