--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
                 </ul>
                 <div class="row portfolio container">
                     <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+
                         <div class="portfolio-img">
                             <img
                             class="img-fluid"
@@ -267,6 +268,7 @@
                         </a>
                         </div>
                     </div>
+                    <!-----Map the remaining data into the portfolio card---->
                 </div>
             </div>
             </section>
