--- a/index.html
+++ b/index.html
@@ -242,9 +242,8 @@
                     <li data-filter=".filter-ceremoney">Ceremony</li>
                     <li data-filter=".filter-honeymoon">Honeymoon</li>
                 </ul>
-                <div class="row portfolio container">
+                <div class="row portfolio-container">
                     <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
-
                         <div class="portfolio-img">
                             <img
                             class="img-fluid"
@@ -261,14 +260,86 @@
                             class="portfolio-lightbox preview-link"
                             title="Wedding Planning 1"
                             >
-                            <ion-icon name="add-outline"></ion-icon>
-                        </a>
+                            <ion-icon name="add-outline"></ion-icon
+                                ></a>
                         <a href="#" class="details-link" title="More details">
                             <ion-icon name="link-outline"></ion-icon>
                         </a>
-                        </div>
+                      </div>  
                     </div>
-                    <!-----Map the remaining data into the portfolio card---->
+                    <!--Map the remaining data into the portfolio card -->
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                        <div class="portfolio-img">
+                            <img
+                            class="img-fluid"
+                            src="./images/portfolio/portfolio-2.jpg"
+                            alt=""
+                            />
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Honeymoon 3</h4>
+                            <p>Honeymoon</p>
+                            <a
+                            href="./images/portfolio/portfolio-2.jpg"
+                            data-gallery="portfolioGallery"
+                            class="portfolio-lightbox preview-link"
+                            title="Wedding Planning 1"
+                            >
+                            <ion-icon name="add-outline"></ion-icon
+                                ></a>
+                        <a href="#" class="details-link" title="More details">
+                            <ion-icon name="link-outline"></ion-icon>
+                        </a>
+                      </div>  
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                    <div class="portfolio-img">
+                        <img
+                        class="img-fluid"
+                        src="./images/portfolio/portfolio-5.jpg"
+                        alt=""
+                        />
+                    </div>
+                    <div class="portfolio-info">
+                        <h4>Honeymoon 2</h4>
+                        <p>Honeymoon </p>
+                        <a
+                        href="./images/portfolio/portfolio-5.jpg"
+                        data-gallery="portfolioGallery"
+                        class="portfolio-lightbox preview-link"
+                        title="Wedding Planning 1"
+                        >
+                        <ion-icon name="add-outline"></ion-icon
+                            ></a>
+                    <a href="#" class="details-link" title="More details">
+                        <ion-icon name="link-outline"></ion-icon>
+                    </a>
+                  </div>  
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                    <div class="portfolio-img">
+                        <img
+                        class="img-fluid"
+                        src="./images/portfolio/portfolio-7.jpg"
+                        alt=""
+                        />
+                    </div>
+                    <div class="portfolio-info">
+                        <h4>Honeymoon 1</h4>
+                        <p>Honeymoon</p>
+                        <a
+                        href="./images/portfolio/portfolio-7.jpg"
+                        data-gallery="portfolioGallery"
+                        class="portfolio-lightbox preview-link"
+                        title="Wedding Planning 1"
+                        >
+                        <ion-icon name="add-outline"></ion-icon
+                            ></a>
+                    <a href="#" class="details-link" title="More details">
+                        <ion-icon name="link-outline"></ion-icon>
+                    </a>
+                  </div>  
                 </div>
             </div>
             </section>
@@ -288,6 +359,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
          crossorigin="anonymous">
+         
         </script> 
         <!--coustomized javascript-->
         <script src="./js/main.js"></script>
