--- a/index.html
+++ b/index.html
@@ -272,12 +272,156 @@
                         <div class="portfolio-img">
                             <img
                             class="img-fluid"
+                            src="./images/portfolio/portfolio-3.jpg"
+                            alt=""
+                            />
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Ceremoney 1</h4>
+                            <p>Ceremoney</p>
+                            <a
+                            href="./images/portfolio/portfolio-3.jpg"
+                            data-gallery="portfolioGallery"
+                            class="portfolio-lightbox preview-link"
+                            title="Wedding Planning 1"
+                            >
+                            <ion-icon name="add-outline"></ion-icon
+                                ></a>
+                        <a href="#" class="details-link" title="More details">
+                            <ion-icon name="link-outline"></ion-icon>
+                        </a>
+                      </div>  
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                        <div class="portfolio-img">
+                            <img
+                            class="img-fluid"
+                            src="./images/portfolio/portfolio-4.jpg"
+                            alt=""
+                            />
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Ceremoney 3</h4>
+                            <p>Ceremoney </p>
+                            <a
+                            href="./images/portfolio/portfolio-4.jpg"
+                            data-gallery="portfolioGallery"
+                            class="portfolio-lightbox preview-link"
+                            title="Wedding Planning 1"
+                            >
+                            <ion-icon name="add-outline"></ion-icon
+                                ></a>
+                        <a href="#" class="details-link" title="More details">
+                            <ion-icon name="link-outline"></ion-icon>
+                        </a>
+                      </div>  
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                        <div class="portfolio-img">
+                            <img
+                            class="img-fluid"
+                            src="./images/portfolio/portfolio-9.jpg"
+                            alt=""
+                            />
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Wedding Planning 2</h4>
+                            <p>Wedding Planning </p>
+                            <a
+                            href="./images/portfolio/portfolio-9.jpg"
+                            data-gallery="portfolioGallery"
+                            class="portfolio-lightbox preview-link"
+                            title="Wedding Planning 1"
+                            >
+                            <ion-icon name="add-outline"></ion-icon
+                                ></a>
+                        <a href="#" class="details-link" title="More details">
+                            <ion-icon name="link-outline"></ion-icon>
+                        </a>
+                      </div>  
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                        <div class="portfolio-img">
+                            <img
+                            class="img-fluid"
+                            src="./images/portfolio/portfolio-8.jpg"
+                            alt=""
+                            />
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Wedding Planning 3</h4>
+                            <p>Wedding Planning </p>
+                            <a
+                            href="./images/portfolio/portfolio-8.jpg"
+                            data-gallery="portfolioGallery"
+                            class="portfolio-lightbox preview-link"
+                            title="Wedding Planning 1"
+                            >
+                            <ion-icon name="add-outline"></ion-icon
+                                ></a>
+                        <a href="#" class="details-link" title="More details">
+                            <ion-icon name="link-outline"></ion-icon>
+                        </a>
+                      </div>  
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                        <div class="portfolio-img">
+                            <img
+                            class="img-fluid"
+                            src="./images/portfolio/portfolio-6.jpg"
+                            alt=""
+                            />
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Ceremoney 2</h4>
+                            <p>Ceremoney</p>
+                            <a
+                            href="./images/portfolio/portfolio-6.jpg"
+                            data-gallery="portfolioGallery"
+                            class="portfolio-lightbox preview-link"
+                            title="Wedding Planning 1"
+                            >
+                            <ion-icon name="add-outline"></ion-icon
+                                ></a>
+                        <a href="#" class="details-link" title="More details">
+                            <ion-icon name="link-outline"></ion-icon>
+                        </a>
+                      </div>  
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                        <div class="portfolio-img">
+                            <img
+                            class="img-fluid"
+                            src="./images/portfolio/portfolio-5.jpg"
+                            alt=""
+                            />
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Honeymoon 1</h4>
+                            <p>Honeymoon</p>
+                            <a
+                            href="./images/portfolio/portfolio-5.jpg"
+                            data-gallery="portfolioGallery"
+                            class="portfolio-lightbox preview-link"
+                            title="Wedding Planning 1"
+                            >
+                            <ion-icon name="add-outline"></ion-icon
+                                ></a>
+                        <a href="#" class="details-link" title="More details">
+                            <ion-icon name="link-outline"></ion-icon>
+                        </a>
+                      </div>  
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                        <div class="portfolio-img">
+                            <img
+                            class="img-fluid"
                             src="./images/portfolio/portfolio-2.jpg"
                             alt=""
                             />
                         </div>
                         <div class="portfolio-info">
-                            <h4>Honeymoon 3</h4>
+                            <h4>Honeymoon 2</h4>
                             <p>Honeymoon</p>
                             <a
                             href="./images/portfolio/portfolio-2.jpg"
@@ -292,54 +436,30 @@
                         </a>
                       </div>  
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
-                    <div class="portfolio-img">
-                        <img
-                        class="img-fluid"
-                        src="./images/portfolio/portfolio-5.jpg"
-                        alt=""
-                        />
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
+                        <div class="portfolio-img">
+                            <img
+                            class="img-fluid"
+                            src="./images/portfolio/portfolio-7.jpg"
+                            alt=""
+                            />
+                        </div>
+                        <div class="portfolio-info">
+                            <h4>Honeymoon3</h4>
+                            <p>Honeymoon</p>
+                            <a
+                            href="./images/portfolio/portfolio-7.jpg"
+                            data-gallery="portfolioGallery"
+                            class="portfolio-lightbox preview-link"
+                            title="Wedding Planning 1"
+                            >
+                            <ion-icon name="add-outline"></ion-icon
+                                ></a>
+                        <a href="#" class="details-link" title="More details">
+                            <ion-icon name="link-outline"></ion-icon>
+                        </a>
+                      </div>  
                     </div>
-                    <div class="portfolio-info">
-                        <h4>Honeymoon 2</h4>
-                        <p>Honeymoon </p>
-                        <a
-                        href="./images/portfolio/portfolio-5.jpg"
-                        data-gallery="portfolioGallery"
-                        class="portfolio-lightbox preview-link"
-                        title="Wedding Planning 1"
-                        >
-                        <ion-icon name="add-outline"></ion-icon
-                            ></a>
-                    <a href="#" class="details-link" title="More details">
-                        <ion-icon name="link-outline"></ion-icon>
-                    </a>
-                  </div>  
-                </div>
-                <div class="col-lg-4 col-md-6 portfolio-item filter-wedding">
-                    <div class="portfolio-img">
-                        <img
-                        class="img-fluid"
-                        src="./images/portfolio/portfolio-7.jpg"
-                        alt=""
-                        />
-                    </div>
-                    <div class="portfolio-info">
-                        <h4>Honeymoon 1</h4>
-                        <p>Honeymoon</p>
-                        <a
-                        href="./images/portfolio/portfolio-7.jpg"
-                        data-gallery="portfolioGallery"
-                        class="portfolio-lightbox preview-link"
-                        title="Wedding Planning 1"
-                        >
-                        <ion-icon name="add-outline"></ion-icon
-                            ></a>
-                    <a href="#" class="details-link" title="More details">
-                        <ion-icon name="link-outline"></ion-icon>
-                    </a>
-                  </div>  
                 </div>
             </div>
             </section>
@@ -358,10 +478,11 @@
         ></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-         crossorigin="anonymous">
-         
-        </script> 
+         crossorigin="anonymous"
+         ></script>
+         <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script> 
         <!--coustomized javascript-->
+        <script src="./js/lsotope.js"></script>
         <script src="./js/main.js"></script>
     </body>
 </html>
