--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
         <meta charset="UTF-8"/>
         <meta name="viewport"content="width=divice-width,intial-scale=1.0"/>
         <link rel="stylesheet" href="./css/style.css "/>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+        rel="stylesheet" 
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+        crossorigin="anonymous"
+        />
+        
+        <link rel="stylesheet" 
+        href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" 
+        />
         <title>Wedding Planning website</title>
     </head>
     <body>
@@ -481,7 +488,9 @@
          crossorigin="anonymous"
          ></script>
          <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script> 
+         <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
         <!--coustomized javascript-->
+        <script src="./js/glightbox.js"></script>
         <script src="./js/lsotope.js"></script>
         <script src="./js/main.js"></script>
     </body>
