--- a/index.html
+++ b/index.html
@@ -471,7 +471,13 @@
             </div>
             </section>
             <!-- Contact section -->
-            <section id="contact" class="contact"></section>
+            <section id="contact" class="contact">
+                <div class="container">
+                    <div class="row">
+                        <h1>Contact Us</h1>
+                    </div>
+                </div>
+            </section>
         </main>
         
         <!--Main End-->
