add map address

--- a/index.html
+++ b/index.html
@@ -476,6 +476,24 @@
                     <div class="row">
                         <h1>Contact Us</h1>
                     </div>
+                    <!--Insert your map here, Google map embedment-->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d63349.15604649826!2d79.88567144999999!3d7.0885924000000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2slk!4v1717941786982!5m2!1sen!2slk" 
+                    width="100%" height="450" style="border:0;"
+                     allowfullscreen="" 
+                     loading="lazy" 
+                     referrerpolicy="no-referrer-when-downgrade"
+                     ></iframe>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-lg-4">
+                        <div class="info">
+                            <div class="address">
+                                <ion-icon name="location-outline"></ion-icon>
+                                <h4>Location</h4>
+                                <p>Street Name, City Name, State, 123456</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
