--- a/index.html
+++ b/index.html
@@ -492,6 +492,16 @@
                                 <h4>Location</h4>
                                 <p>Street Name, City Name, State, 123456</p>
                             </div>
+                            <div class="email">
+                                <ion-icon name="mail-outline"></ion-icon>
+                                <h4>Email:</h4>
+                                <p>infor2001@gmail.com</p>
+                            </div>
+                            <div class="phone">
+                                <ion-icon name="call-outline"></ion-icon>
+                                <h4>Call:</h4>
+                                <p>+94 71 522 9322</p>
+                            </div>
                         </div>
                     </div>
                 </div>
