--- a/index.html
+++ b/index.html
@@ -504,6 +504,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-8 mt-5 mt-lg-0">
+                        <form>
+                            <div class="row">
+                                <div class="col-md-6 form-ground">
+                                    <input type="text" class="from-control" placeholder="Your name"
+                                    required
+                                    />
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </section>
         </main>
