--- a/index.html
+++ b/index.html
@@ -507,12 +507,28 @@
                     <div class="col-lg-8 mt-5 mt-lg-0">
                         <form>
                             <div class="row">
-                                <div class="col-md-6 form-ground">
+                                <div class="col-md-6 form-group">
                                     <input type="text" class="from-control" placeholder="Your name"
                                     required
                                     />
                                 </div>
+                                <div class="col-md-6 form-group mt-3 mt-md-0">
+                                    <input type="email" class="from-control" placeholder="Your email"
+                                    required
+                                    />
                             </div>
+                        </div>
+                        <div class="form-group mt-3">
+                            <input
+                            type="text"
+                            class="from-control"
+                            placeholder="Subject"
+                            required
+                            />
+                        </div>
+                        <div class="form-group mt-3">
+                            
+                        </div>
                         </form>
                     </div>
                 </div>
