complete contact form

--- a/index.html
+++ b/index.html
@@ -527,7 +527,17 @@
                             />
                         </div>
                         <div class="form-group mt-3">
-                            
+                            <textarea
+                            class="form-control"
+                            name="message"
+                            id="message"
+                            rows="5"
+                            placeholder="Message"
+                            required
+                            ></textarea>
+                        </div>
+                        <div class="text-center">
+                            <button type="submit">Send Message</button>
                         </div>
                         </form>
                     </div>
