--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <!---Header-->
         <header>
             <a href="/"class="logo">Wedding</a>
-            <a href="#"class="menu"><ion-icon name="menu-outline"></ion-icon></a>
+            <a href="#"class="menu">
+                <ion-icon class="open"name="menu-outline"></ion-icon>
+                <ion-icon class="close"name="close-outline"></ion-icon>
+            </a>
             <ul class="nav">
            <li><a class="nav-btn activate"href="/" onclick="resetHeader();">
             <ion-icon name="home-outline"></ion-icon>
@@ -560,7 +563,8 @@
          ></script>
          <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.js"></script> 
          <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
-        <!--coustomized javascript-->
+        
+         <!--coustomized javascript-->
         <script src="./js/glightbox.js"></script>
         <script src="./js/lsotope.js"></script>
         <script src="./js/main.js"></script>
