--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!---Header-->
         <header>
             <a href="/"class="logo">Wedding</a>
-            <a href="#"class="menu">
+            <a href="#"class="menu" onclick="toggleMenu();">
                 <ion-icon class="open"name="menu-outline"></ion-icon>
                 <ion-icon class="close"name="close-outline"></ion-icon>
             </a>
